--- a/colors.html
+++ b/colors.html
@@ -19,6 +19,7 @@
         />
     </head>
 
+
     <body>
         <div class="container my-4 p-3 bg-light shadow rounded-3">
             <h3>Text Colors</h3>
@@ -70,6 +71,9 @@
             <div class="border border-light text- mb-2 rounded-3"><b>Border Light</b></div>
             <div class="border border-dark text- mb-2 rounded-3"><b>Border Dark</b></div>
 
+            <div class="container my-4 d-flex justify-content-center">
+                <a href="colors.html" class="btn btn-warning">GO TO COLORS!</a>
+                
  
 
         <!-- Bootstrap JavaScript Libraries -->
