--- a/colors.html
+++ b/colors.html
@@ -72,7 +72,7 @@
             <div class="border border-dark text- mb-2 rounded-3"><b>Border Dark</b></div>
 
             <div class="container my-4 d-flex justify-content-center">
-                <a href="colors.html" class="btn btn-warning">GO TO COLORS!</a>
+                <a href="containers.html" class="btn btn-warning">GO TO CONTAINERS!</a>
                 
  
 
