--- a/typography.html
+++ b/typography.html
@@ -92,7 +92,10 @@
          </div>
 
 
+         <div class="container my-4 d-flex justify-content-center">
+            <a href="colors.html" class="btn btn-warning">GO TO COLORS!</a>
 
+            
 
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
