--- a/index.html
+++ b/index.html
@@ -8,108 +8,71 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
-
+<link rel="stylesheet" href="style.css">
         <!-- Bootstrap CSS v5.2.1 -->
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
+            
         />
+
+
     </head>
 
     <body>
+      <div class="container m-5 shadow bg-light p-5 rounded-5">
+<h3>Hello World</h3>
+<h4>This i s always on the center. Notice the equal margin in both sides.</h4>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque non obcaecati distinctio ut vero neque mollitia praesentium illo, dolor nobis alias reiciendis voluptatem nostrum iste laboriosam, ratione autem natus aliquam delectus inventore dicta facere earum fugit illum. Ea atque, perspiciatis, ex expedita voluptatibus beatae impedit quae totam laudantium dignissimos officia.
+      </div>
+
+      <div class="container-fluid m-5">
+        <h3>Hello World</h3>
+        <h4>This is always on the center. Notice the equal margin in both sides.</h4>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque non obcaecati distinctio ut vero neque mollitia praesentium illo, dolor nobis alias reiciendis voluptatem nostrum iste laboriosam, ratione autem natus aliquam delectus inventore dicta facere earum fugit illum. Ea atque, perspiciatis, ex expedita voluptatibus beatae impedit quae totam laudantium dignissimos officia.
+              </div>
+
+<div class="container">
+    <h3>Row and Class</h3>
+<div class="row g-0">
+   <div class="col">
+    <div class="custom-box">Box 1</div>
+   </div>
+   <div class="col">
+    <div class="custom-box">Box 2</div>
+   </div>
+   <div class="col">
+    <div class="custom-box">Box 3</div>
+   </div>
+   <div class="col">
+    <div class="custom-box">Box 4</div>
+   </div>
+</div>
+</div>
+
+<div class="container-fluid">
+    <h3>col-sm-6</h3>
+    <div class="row g-0">
+        <div class="col-lg-4 col-md-12">
+            <div class="custom-box">Box 1</div>
+        </div>
+        <div class="col-lg-4 col-md-12">
+            <div class="custom-box">Box 2</div>
+        </div>
+        <div class="col-lg-4 col-md-12">
+            <div class="custom-box">Box 3</div>
+        </div>
+    </div>
+</div>
+
+<div class="container my-4 d-flex justify-content-center">
+<a href="typography.html" class="btn btn-success">GO TO TYPOGRAPHY!</a>
 
 
+</div>
 
-
-
-
-
-
-
-
-
-        <nav
-            class="navbar navbar-expand-sm navbar-light bg-light"
-        >
-            <div class="container">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button
-                    class="navbar-toggler d-lg-none"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapsibleNavId"
-                    aria-controls="collapsibleNavId"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                 <div class="collapse navbar-collapse" id="collapsibleNavId">
-                    <ul class="navbar-nav me-auto mt-2 mt-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#" aria-current="page"
-                                >Home
-                                <span class="visually-hidden">(current)</span></a
-                            >
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a
-                                class="nav-link dropdown-toggle"
-                                href="#"
-                                id="dropdownId"
-                                data-bs-toggle="dropdown"
-                                aria-haspopup="true"
-                                aria-expanded="false"
-                                >Dropdown</a
-                            >
-                            <div
-                                class="dropdown-menu"
-                                aria-labelledby="dropdownId"
-                            >
-                                <a class="dropdown-item" href="#"
-                                    >Action 1</a
-                                >
-                                <a class="dropdown-item" href="#"
-                                    >Action 2</a
-                                >
-                            </div>
-                        </li>
-                    </ul>
-                    <form class="d-flex my-2 my-lg-0">
-                        <input
-                            class="form-control me-sm-2"
-                            type="text"
-                            placeholder="Search"
-                        />
-                        <button
-                            class="btn btn-outline-success my-2 my-sm-0"
-                            type="submit"
-                        >
-                            Search
-                        </button>
-                    </form>
-                </div>
-            </div>
-        </nav>
-        
-
-
-
-
-
-
-
-
-
-
-
-
-      </body>
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
