--- a/colors.html
+++ b/colors.html
@@ -72,10 +72,10 @@
             <div class="border border-dark text- mb-2 rounded-3"><b>Border Dark</b></div>
 
             <div class="container my-4 d-flex justify-content-center">
-                <a href="containers.html" class="btn btn-warning">GO TO CONTAINERS!</a>
+                <a href="index.html" class="btn btn-warning">GO TO CONTAINERS!</a>
 
                 
-                
+
  
 
         <!-- Bootstrap JavaScript Libraries -->
