BS5 COMPONENTS (CHANGE IMAGE)

--- a/components.html
+++ b/components.html
@@ -58,7 +58,7 @@
         <h2 class="text-center mb-4">About Me</h2>
         <div class="row align-items-center">
         <div class="col-md-4">
-    <img class="rounded-circle img-fluid border border-white border-5" src="http://itsaian.tech/img/jullianne_kaye.png" alt="">
+    <img class="rounded-circle img-fluid border border-white border-5" src="img/jullianne_kaye.png" alt="">
     </div>
     
     <div class="col-md-8">
@@ -103,7 +103,7 @@
     <div class="row">
         <div class="col-md-4 my-3">
             <div class="card h-100 d-flex flex-column" >
-                <img class="card-img-top" src="http://itsaian.tech/img/laiya.png" alt="">
+                <img class="card-img-top" src="img/jullianne_kaye.png" alt="">
                 <div class="card-body d-flex flex-column">
                   <h5 class="card-title">Project 1</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -115,7 +115,7 @@
         <div class="col-md-4 my-3" >
 
             <div class="card h-100 d-flex flex-column" >
-                <img class="card-img-top" src="http://itsaian.tech/img/laiya.png" alt="">
+                <img class="card-img-top" src="img/jullianne_kaye.png" alt="">
                 <div class="card-body d-flex flex-column">
                   <h5 class="card-title">Project 1</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -125,7 +125,7 @@
         </div>
         <div class="col-md-4 my-3">
             <div class="card h-100 d-flex flex-column" >
-                <img class="card-img-top" src="http://itsaian.tech/img/laiya.png" alt="">
+                <img class="card-img-top" src="img/jullianne_kaye.png" alt="">
                 <div class="card-body d-flex flex-column">
                   <h5 class="card-title">Project 1</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
