--- a/websitebyjkfg.html
+++ b/websitebyjkfg.html
@@ -18,7 +18,7 @@
         />
     </head>
 
-    <body style="background-image: url(https://i.pinimg.com/originals/eb/50/87/eb50875a68b04b0480fa929af2c7547c.gif); background-repeat: no-repeat; background-size:contain; margin-top: 50px; padding: 30px;">
+    <body style="background-image: url(https://i.pinimg.com/originals/eb/50/87/eb50875a68b04b0480fa929af2c7547c.gif); background-repeat: no-repeat; background-size:cover; margin-top: 50px; padding: 30px;">
         
        <nav class="navbar navbar-expand-lg bg-body-tertiary">
 
@@ -41,6 +41,19 @@
 
        </nav>
 
+
+<!--Example Background-->
+
+<div class="scanlines"></div>
+
+<div class="intro-wrap">
+	<div class="noise"></div>
+	<div class="noise noise-moving"></div>
+
+	<div class="play" data-splitting>PLAY</div>
+	<div class="time">--:--</div>
+	<div class="recordSpeed">SLP 0:00:00</div>
+</div>
 <!--Hero Section-->
        <div class="p-5 h-100">
         <div class="container-fluid py-5 text-center">
